# darktable

./: .clang-format  .dir-locals.el  .dockerignore  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .mailmap  .travis.yml  0001-lighttable-preserve-custom-sort-order.patch  AUTHORS  Brewfile  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ConfigureChecks.cmake  DefineOptions.cmake  Dockerfile  Makefile.am  NEWS  PR_DESCRIPTION.md  README  README.md  README_zh-Hans.md  RELEASE_NOTES  RELEASE_NOTES.md  SUBMISSION_READY.md  TODO  TRANSLATORS  acinclude.m4  adobe_coeff.c  appveyor.yml  autogen.sh  benchmark_diffuse.py  benchmark_general_case.py  benchmark_presets.py  build-doc.sh  build.sh  cameras.xml  (+36 more)
data/: CMakeLists.txt  ai_models.json  darktable-3.18.css.in  darktable-elegant-grey.css  darktable-elegant.css  darktable-faster  darktable-icons-grey.css  darktable-icons.css  darktable.appdata.xml  darktable.appdata.xml.in  darktable.bash  darktable.css  darktable.css.in  darktable.desktop  darktable.desktop.in  darktable.glade  darktable.gtkrc  darktable.gtkrc.in  darktable.schemas  darktableconfig.dtd  darktableconfig.dtd.in  darktableconfig.xml  darktableconfig.xml.in  darktablerc  editor_modelines.txt  gdb_commands  keyboardrc  luarc  mcp-tools.json  noiseprofiles.json  noiseprofiles.schema  om-3-wb.json  org.darktable.darktable.appdata.xml.in  org.darktable.darktable.desktop.in  org.darktable.darktable.metainfo.xml.in  ort_gpu.json  shortcutsrc  shortcutsrc.de  supported_extensions.cmake  wb_presets.json  (+1 more)
data/halide/: CMakeLists.txt
data/js/: effects.js  galleria.classic.js  galleria.js  jquery-1.8.2.min.js  lightbox-web.js  lightbox.js  lightzap.js  prototype.js  supersized.js  supersized.shutter.js
data/kernels/: CMakeLists.txt  Makefile.am  agx.cl  atrous.cl  basecurve.cl  basic.cl  basicadj.cl  bilateral.cl  blendop.cl  bloom.cl  blurs.cl  bspline.cl  capture.cl  channelmixer.cl  clip_rotate.cl  color_conversion.cl  color_conversion.h  colorequal.cl  colorharmonizer.cl  colorreconstruction.cl  colorspace.cl  colorspace.h  colorspaces.cl  common.h  contrast.cl  demosaic_markesteijn.cl  demosaic_other.cl  demosaic_ppg.cl  demosaic_rcd.cl  demosaic_vng.cl  denoiseprofile.cl  diffuse.cl  dwt.cl  extended.cl  filmic.cl  filminversion.cl  gaussian.cl  guided_filter.cl  hazeremoval.cl  highpass.cl  (+22 more)
data/latex/: header.tex  photobook.cls
data/lua/: introspection.lua  script_manager.lua
data/metal/: CMakeLists.txt  basic.metal  basic2.metal  diffuse.metal  exposure.metal
data/midi/: midirc-Arturia BeatStep  midirc-BCF2000  midirc-Loupedeck+  midirc-X-TOUCH MINI
data/pixmaps/: CMakeLists.txt
data/pswp/: photoswipe-ui-default.min.js  photoswipe.js
data/style/: lightbox.css  lightzap.css  lz-theme.css  style.css  supersized.css  supersized.shutter.css
data/styles/: CMakeLists.txt  darktable_Canon_EOS 10D.dtstyle  darktable_Canon_EOS 1100D.dtstyle  darktable_Canon_EOS 2000D.dtstyle  darktable_Canon_EOS 4000D.dtstyle  darktable_Canon_EOS 5D Mark II.dtstyle  darktable_Canon_EOS 5D Mark III.dtstyle  darktable_Canon_EOS 5D Mark IV.dtstyle  darktable_Canon_EOS 5D.dtstyle  darktable_Canon_EOS 60D.dtstyle  darktable_Canon_EOS 6D.dtstyle  darktable_Canon_EOS 70D.dtstyle  darktable_Canon_EOS 7D Mark II.dtstyle  darktable_Canon_EOS 7D.dtstyle  darktable_Canon_EOS 80D.dtstyle  darktable_Canon_EOS D30.dtstyle  darktable_Canon_EOS Digital Rebel XT.dtstyle  darktable_Canon_EOS Kiss Digital N.dtstyle  darktable_Canon_EOS Kiss M.dtstyle  darktable_Canon_EOS Kiss X3.dtstyle  darktable_Canon_EOS M.dtstyle  darktable_Canon_EOS M10.dtstyle  darktable_Canon_EOS M2.dtstyle  darktable_Canon_EOS M3.dtstyle  darktable_Canon_EOS M50 Mark II.dtstyle  darktable_Canon_EOS M50.dtstyle  darktable_Canon_EOS M6.dtstyle  darktable_Canon_EOS R-series.dtstyle  darktable_Canon_EOS R3.dtstyle  darktable_Canon_EOS R50.dtstyle  darktable_Canon_EOS R6 Mark II.dtstyle  darktable_Canon_EOS R6.dtstyle  darktable_Canon_EOS R7.dtstyle  darktable_Canon_EOS RP.dtstyle  darktable_Canon_EOS Rebel SL1.dtstyle  darktable_Canon_EOS Rebel T3.dtstyle  darktable_Canon_EOS Rebel T5.dtstyle  darktable_Canon_EOS Rebel T_ series.dtstyle  darktable_Canon_EOS _200D Mark II,250D_.dtstyle  darktable_Canon_EOS-1D Mark II.dtstyle  (+515 more)
data/themes/: HighDPI-Contrasty-Serif-Narrow.css  HighDPI-Contrasty-Serif-Wide.css  HighDPI-Serif-Narrow.css  HighDPI-Serif-Wide.css  chunk-blue-accent-color.css  chunk-condensed.css  (+37 more)
doc/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  README_ZH.md  TODO  TRANSLATORS  TRANSLATORS.md  Windows.txt  darktable-cli.pod  darktable.pod  doxygen.conf  grouping.txt  thumbnail_color_management.txt
packaging/: CMakeLists.txt  create_darktablerc.sh
pixmaps/: Makefile.am  icon-theme-installer
po/: CMakeLists.txt  LINGUAS  POTFILES.in  POTFILES.skip  af.mo  af.po  ca.po  cs.po  da.po  darktable.pot  de.po  el.mo  el.po  en@truecase.po  en_GB.mo  en_GB.po  eo.po  es.po  fi.po  fr.po  gl.po  he.po  hu.po  it.po  ja.po  ko_KR.po  lo.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sr@latin.po  sv.po  (+6 more)
src/: CMakeLists.txt  Makefile.am  altivec.h  config.cmake.h  is_supported_platform.h  main.c  shared.am  version.cmake.h
tools/: .gitattributes  CMakeLists.txt  Makefile.am  append_modelines.sh  appimage-build-script.sh  authors_h.sh  beautify_style.sh  check_camera_support  checkcoeffs.sh  common.cmd  common.sh  create_accel_strings.sh  create_control_svg.sh  create_darktablerc.sh  create_metadata.sh  create_preferences.sh  create_preferences.sh.in  create_release.sh  create_version_c.sh  create_version_h.sh  create_version_sh.sh  custom.cmd  darktable-gnome-nightlight-disabled.sh  derive_filmic_v6_gamut_mapping.py  devel-stats.sh  diff_lua_api.lua  discordrpc.py  dngmeta.rb  dngmeta.sh  dtstyle_to_xmp.py  extract_wb  extract_wb.py  extract_wb_from_images.sh  find_patchers.pl  generate-authors.sh  generate-translation.sh  generate_authors.rb  generate_darktablerc.xsl  generate_darktablerc_conf.xsl  generate_darktablerc_doc.xsl  (+41 more)
(+3241 files in other folders)
